# Reusable subflow to dismiss unexpected/dynamic system and app popups
appId: ${APP_ID}
---
- runFlow:
    when:
      visible: "CLOSE"
    commands:
      - tapOn: "CLOSE"
- runFlow:
    when:
      visible: "NO"
    commands:
      - tapOn: "NO"
- runFlow:
    when:
      visible: "Close app"
    commands:
      - tapOn: "Close app"
- runFlow:
    when:
      visible: "Wait"
    commands:
      - tapOn: "Wait"
